Cart working for bot anon and auth user